--- a/website/templates/common_header.pug
+++ b/website/templates/common_header.pug
@@ -1,5 +1,7 @@
-header.blog-header.py-3
-	div.row.flex-nowrap.justify-content-between.align-items-center
-		div.col-12.text-center
-			a.blog-header-logo.text-dark(href="/")
-				img.blog-header-logo(src="/images/logo.png" title="Projet du mois OpenStreetMap")
+div.container-fluid
+	header.blog-header.py-3
+		div.row.flex-nowrap.justify-content-between.align-items-center
+			div.col-12.text-center
+				a.blog-header-logo.text-dark(href="/")
+					img.blog-header-logo(src="/images/logo.png" title="Projet du mois OpenStreetMap")
+				p.m-0.mt-2.text-muted Catalyseur d'énergies pour OpenStreetMap
