--- a/website/templates/project.pug
+++ b/website/templates/project.pug
@@ -16,10 +16,10 @@ html(lang="fr")
 					else
 						a.p-2.text-muted(href="#contribute") Participer
 						a.p-2.text-muted(href="#statistics") Statistiques
-					a.p-2.text-muted(href="/#data") Données
+					a.p-2.text-muted(href="#data") Données
 				a.connect-osm.btn.btn-sm.btn-outline-secondary.text-truncate.ml-2(role="button")
 
-		div.container.pb-5
+		div.container
 			//- Project summary
 			div#summary.jumbotron.p-4.p-md-5.mb-3.text-white.rounded.bg-dark
 				div.text-center
@@ -34,10 +34,12 @@ html(lang="fr")
 					p.lead.mb-0
 						a.btn.btn-primary.btn-lg(role="button" href="#contribute") Participer
 
-		div.container-fluid.py-5.mb-3.pdm-section-highlight
+		div.container-fluid.py-5
 			//- Contribute
 			div#contribute.container.blog-post
 				h2.blog-post-title Participer
+				if !isActive
+					p Ce projet du mois est terminé, mais la cartographie dans OpenStreetMap ne s'arrête pas ! Vous pouvez continuer à enrichir les données à l'aide de nos outils et de la documentation.
 				div.btn-over-wide
 					a.pdm-wide-link.map(href=`/projects/${id}/map`) Commencer à contribuer
 					a.btn.btn-light
@@ -49,7 +51,31 @@ html(lang="fr")
 						i.fa.fa-book
 
 		//- Statistics
-		include stats.pug
+		div.container-fluid.py-5.mb-3.pdm-section-highlight
+			include stats.pug
+
+		//- Data
+		div#data.container.blog-post.py-5
+			h2.blog-post-title Données
+			if isActive
+				p Retrouvez les précédents projets du mois, leurs outils, statistiques et données.
+				div.row.align-items-center
+					each pastProj in projects.past.reverse()
+						div.col-md-6.col-lg-4.h-100
+							div.media.mb-3
+								a.align-self-center.mr-3(href=`/projects/${pastProj.id}`)
+									img(src=pastProj.icon alt="" style="max-width: 100px")
+								div.media-body.align-self-center
+									a.text-decoration-none(href=`/projects/${pastProj.id}`)
+										| #{pastProj.title}
+										span.text-muted.d-block= pastProj.period
+			else
+				p L'ensemble des données produites avant, pendant et après le projet du mois sont disponibles aux adresses suivantes :
+				ul
+					each datalink in opendata
+						li: a(href=datalink.url)
+							| #{datalink.title}
+							small &nbsp;(via #{datalink.via})
 
 		div.d-flex.align-items-start(style="max-height: 250px; overflow: hidden")
 			img.w-100(src="/images/background.png")
@@ -62,14 +88,9 @@ html(lang="fr")
 						include:markdown-it ../../README.md
 					aside.col-md-4.blog-sidebar
 						div.p-4.mb-3.rounded
-							if past
-								h4.font-italic Projets passés
-								ol.list-unstyled
-									each pastProj in projects
-										li: a(href=`/projects/${pastProj.id}`)= pastProj.label
-									li: a(href="https://wiki.openstreetmap.org/wiki/FR:Project_of_the_month#Projets_pass.C3.A9s" rel="noopener") Davantage sur le wiki OSM
 							h4.font-italic En savoir plus
 							ul.list-unstyled.mb-0
 								li: a(href=CONFIG.REPOSITORY_URL rel="noopener") Code source du projet
+								li: a(href="https://wiki.openstreetmap.org/wiki/FR:Project_of_the_month#Projets_pass.C3.A9s" rel="noopener") Projets précédents
 								li: a(href="https://openstreetmap.fr" rel="noopener") OpenStreetMap France
 			p Copyright 2020 ProjetDuMois.fr - Développé sous licence libre AGPL 3.0
