--- a/website/templates/stats.pug
+++ b/website/templates/stats.pug
@@ -1,9 +1,9 @@
-div#statistics.blog-post.container.py-5
+div#statistics.blog-post.container
 	h2.blog-post-title.mb-3 Statistiques
 
 	//- Synthetic stats
 	div.row.mb-4
-		div.col-md-4.mb-2
+		div.col-md-4.mb-2#stats-pctdone-col
 			div.p-4.no-gutters.border.rounded.overflow-hidden.flex-md-row.shadow-sm.position-relative.h-100
 				h3#stats-pctdone.mb-0 ?%
 				p.card-text.mb-auto des #{statistics.osmose_tasks}
@@ -67,7 +67,12 @@ script.
 		.then(res => res.json())
 		.then(res => {
 			// % of done tasks
-			document.getElementById("stats-pctdone").innerHTML = res.pctTasksDone+" %";
+			if(res.pctTasksDone) {
+				document.getElementById("stats-pctdone").innerHTML = res.pctTasksDone+" %";
+			}
+			else {
+				document.getElementById("stats-pctdone-col").classList.add("d-none");
+			}
 
 			// Amount of contributors
 			document.getElementById("stats-contributors").innerHTML = res.nbContributors;
