--- a/website/templates/pages/map.pug
+++ b/website/templates/pages/map.pug
@@ -2,7 +2,7 @@
 doctype html
 html(lang="fr")
 	head
-		include common_head.pug
+		include ../common/head.pug
 	body
-		include map_navbar.pug
-		include map.pug
+		include ../components/map_navbar.pug
+		include ../components/map.pug
