--- a/website/templates/common/head.pug
+++ b/website/templates/common/head.pug
@@ -19,7 +19,7 @@ link(rel="stylesheet" type="text/css" href="/lib/mapbox-gl/mapbox-gl.css")
 link(rel="stylesheet" type="text/css" href="/lib/chart.js/chart.css")
 link(rel="stylesheet" type="text/css" href="/lib/fontawesome/css/all.min.css")
 style
-	include index.css
+	include ../style.css
 
 //- JS
 script(src="/lib/mapbox-gl/mapbox-gl.js")
