--- a/website/templates/pages/map.pug
+++ b/website/templates/pages/map.pug
@@ -5,4 +5,5 @@ html(lang="fr")
 		include ../common/head.pug
 	body
 		include ../components/map_navbar.pug
+		include ../components/map_sidebar.pug
 		include ../components/map.pug
